@@ -7,6 +7,7 @@ Version [next]
 Version 3.3.1
 ----------------------------------------
 + #238 (Core)(Fix) Included parameter results in failed steps
++ #231 (Framework)(New) Updated ResourcePool with constructor accepting async resource factory method
 
 Version 3.3.0
 ----------------------------------------
